Use Palantir Java Formatter for post-processing Java code